@@ -1,0 +1,5 @@
+
+-- Add GTIN column
+ALTER TABLE releases_rev ADD COLUMN gtin bigint NOT NULL DEFAULT 0;
+
+
