@@ -18,6 +18,7 @@ TODO:
 	  file to override all options - not available on SVN
 	- Dynamic loading, several bugfixes, and code cleanup for Multi
 	- Added 'School Life' category
+	- Added GTIN field to releases
 
 1.16 - 2008-05-22
 	- Release dates in the current year or month without a specified day will
